--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ name: Blog Name
 description: Software Developer
 
 # Url is currently only used only for the RSS feed in feed.xml
-url: http://streetturtle.github.io
-#url: http://localhost:4000
+url: "https://aakashbhusal7.github.io"
 
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
 baseurl: '/jekyll-clean-dark'
