--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description:  # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://aakashbhusal7.github.io" # the base hostname & protocol for your site
 
-github_username:    aakashbhusal
+github_username:    aakashbhusal7
 instagram_username: picklerick1
 twitter_username:   AakashGerrard8
 
