--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: 'Wubba lubba dub dub'
 url: 'https://aakashb.com.np'
 baseurl: ''
 google_analytics: 'UA-128303089-1'
-disqus_shortname: 'madhusudhansubedi'
+disqus_shortname: 'aakashbhusal7'
 future: true
 
 author:
